-Iteration 2 test refactoring